@@ -179,9 +179,7 @@ class ContentModelFrontpage extends JModel
 
 		// Does the user have access to view the items?
 		if ($noauth) {
-			// $where .= ' AND a.access <= '.(int) $gid;
-			// Now how cool is the simplicity of this!
-			$where .= ' AND a.access IN ('.JAcl::getAllowedAssetGroups('core', 'global.view').')';
+			$where .= ' AND a.access IN ('.implode(',', $user->authorisedLevels()).')';
 		}
 
 		if ($user->authorize('com_content', 'edit', 'content', 'all')) {
