@@ -109,6 +109,10 @@ INSERT INTO `#__content` VALUES
 (44, 'The New Joomla Security Strike Team', 'the-new-joomla-security-strike-team', '', '<p>The Joomla Project has assembled a top-notch team of experts to form the new Joomla Security Strike Team. This new team will solely focus on investigating and resolving security issues. Instead of working in relative secrecy, the JSST will have a strong public-facing presence at the new <a href="http://developer.joomla.org/security.html">Joomla Security Center</a>.</p>', '<p>The new JSST will call the new <a href="http://developer.joomla.org/security.html">Joomla Security Center</a> their home base. The Security Center provides a public presence for <a href="http://developer.joomla.org/security/news.html">security issues</a> and a platform for the JSST to <a href="http://developer.joomla.org/security/articles-tutorials.html">help the general public better understand security</a> and how it relates to Joomla. The Security Center also offers users a clearer understanding of how security issues are handled. There''s also a <a href="http://feedproxy.google.com/JoomlaSecurityNews">news feed</a>, which provides subscribers an up-to-the-minute notification of security issues as they arise.</p>', 1, 1, 0, 1, '2004-07-07 09:54:06', 62, '', '2008-08-31 04:07:47', 62, 0, '0000-00-00 00:00:00', '2004-07-06 22:00:00', '0000-00-00 00:00:00', '', '', 'show_title=\nlink_titles=\nshow_intro=\nshow_section=\nlink_section=\nshow_category=\nlink_category=\nshow_vote=\nshow_author=\nshow_create_date=\nshow_modify_date=\nshow_pdf_icon=\nshow_print_icon=\nshow_email_icon=\nlanguage=\nkeyref=\nreadmore=', 1, 0, 3, '', '', 0, 0, 'robots=\nauthor='),
 (45, 'Joomla Community Portal Online', 'joomla-community-portal-online', '', '<p>The new <a href="http://community.joomla.org/">Joomla Community Portal</a> is now online. The Joomla Community Portal is a new web site for the Joomla community. There you will find a constant source of information about the activities powering the Joomla Project, learn about <a href="http://community.joomla.org/events.html">Joomla Events</a> worldwide, and see if there is a <a href="http://community.joomla.org/joomla-user-groups.html">Joomla User Group</a> nearby. A new, monthly <a href="http://community.joomla.org/magazine.html">Joomla Community Magazine</a> promises an interesting overview of project activities, community accomplishments, and learning material.</p>', '<p>The <a href="http://community.joomla.org/magazine.html">Joomla Community Magazine</a> promises to be a must read each month. Community members will take turns sharing cool Joomla 1.5 Web sites, Joomla 1.5 GPL extensions, event information, involvement opportunities, and articles about local communities.</p> <p>The new <a href="http://community.joomla.org/connect.html">JoomlaConnect™</a> brings together tons of Joomla news from all over the world in your language. Get the latest and greatest by clicking <a href="http://community.joomla.org/connect.html">here</a>.</p>', 1, 1, 0, 1, '2004-07-07 09:54:06', 62, '', '2008-08-31 04:21:50', 62, 0, '0000-00-00 00:00:00', '2004-07-06 22:00:00', '0000-00-00 00:00:00', '', '', 'show_title=\nlink_titles=\nshow_intro=\nshow_section=\nlink_section=\nshow_category=\nlink_category=\nshow_vote=\nshow_author=\nshow_create_date=\nshow_modify_date=\nshow_pdf_icon=\nshow_print_icon=\nshow_email_icon=\nlanguage=\nkeyref=\nreadmore=', 2, 0, 2, '', '', 0, 0, 'robots=\nauthor=');
 
+-- Quick hack to fix the access levels
+
+UPDATE `#__content` SET access = access + 1;
+
 --
 -- Dumping data for table `#__content_frontpage`
 --
